# ai-agent-chatbot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  LESSONS.md  PROJECT_SUMMARY.md  README.md  commitlint.config.js  docker-compose.yml  pre-commit-config.yaml  render.yaml  vercel.json
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  langgraph.json  pyproject.toml
backend/scripts/: seed_documents.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  base.py  chat_agent.py  code_agent.py  conversation_memory.py  factory.py  rag_agent.py  report_agent.py  research_agent.py  research_evidence.py  supervisor.py  web_search_agent.py
backend/src/api/: __init__.py  auth.py  chat_turn.py  dependencies.py  middleware.py  routes.py  schemas.py  sse_streamer.py
backend/src/auth/: __init__.py  dependencies.py  schemas.py  supabase_client.py
backend/src/core/: __init__.py  auto_summarize.py  config.py  container.py  context_manager.py  di_container.py  exceptions.py  llm_cache.py  logging.py  prompt_security.py  protocols.py  topic_memory.py  user_profiler.py  validators.py
backend/src/documents/: __init__.py  chunker.py  embeddings.py  factory.py  lifecycle.py  models.py  parser.py  pinecone_store.py  retriever_impl.py  store.py  upload.py
backend/src/graph/: __init__.py  builder.py  edges.py  router.py  state.py  task_queue.py  tool_nodes.py
backend/src/llm/: __init__.py  anthropic_provider.py  factory.py  invocation.py  ollama_provider.py  openai_provider.py
backend/src/memory/: __init__.py  factory.py  in_memory_store.py  long_term_memory.py  memory_weights.py  rate_limit_store.py  redis_store.py
backend/src/observability/: __init__.py  agent_metrics.py  metrics_store.py  models.py
backend/src/session/: __init__.py  store.py
backend/src/tools/: __init__.py  code_executor.py  (+4 more)
backend/tests/: conftest.py
(+106 files in other folders)
